agregando una pequeña correcion visual

--- a/frontend/src/app/components/pages/descuentos-config/descuentos-config.component.html
+++ b/frontend/src/app/components/pages/descuentos-config/descuentos-config.component.html
@@ -30,7 +30,7 @@
 			<table class="table align-middle">
 				<thead class="table-light">
 					<tr>
-						<th>#</th>
+						<th>Nro</th>
 						<th>Nombre</th>
 						<th>Tipo</th>
 						<th class="text-end">Valor</th>
@@ -81,7 +81,7 @@
 			<table class="table align-middle">
 				<thead class="table-light">
 					<tr>
-						<th>#</th>
+						<th>Nro</th>
 						<th>Nombre</th>
 						<th>Tipo</th>
 						<th class="text-end">Valor</th>
